@@ -9,13 +9,14 @@ to make sure you have the following installed:
 - Twisted (www.twistedmatrix.com)
 - Optional: nevow (http://www.nevow.org/) for web interface
 
-Then, go into the src directory and copy config_example.py to config.py and
-edit config.py.  Change the jid to the Jabber ID you want this transport to
-answer as.  Change mainServer to the IP address or DNS name of your Jabber
-server.  Change secret to the shared secret between transports and your
-Jabber server (should be in router.xml for Jabberd2).  Change port to the
-port this transport is to connect to (also found in router.xml for Jabberd2).
-Edit other options at your leisure, they are fairly self-documented.
+Then, in the same directory as this INSTALL, copy config_example.xml to
+config.xml and edit config.xml.  Change the jid to the Jabber ID you want
+this transport to answer as.  Change mainServer to the IP address or DNS
+name of your Jabber server.  Change secret to the shared secret between
+transports and your Jabber server (should be in router.xml for Jabberd2).
+Change port to the port this transport is to connect to (also found in
+router.xml for Jabberd2).  Edit other options at your leisure, they are
+fairly self-documented.
 
 If you are migrating from JIT, you can copy over your spool directory into
 the same directory that this INSTALL file is.  (make the jid field is set to
@@ -41,7 +42,7 @@ With Jabberd1, you need to add something like the following to jabber.xml:
 	</accept>
 </service>
 
-Check that icq.host.com is the same as the 'jid' setting from config.py
+Check that icq.host.com is the same as the 'jid' setting from config.xml
 and that XXXX is the same as the 'port' setting. Also 'secret' must
 correspond, and the 'mainServer' setting should be pointing to the same
 interface as the <ip/> tag is (in this example the loopback interface is
@@ -53,7 +54,7 @@ You must also add this to the browse section of your jabber.xml file
 	<ns>jabber:iq:register</ns>
 </service>
 
-Once again, icq.host.com must correspond to the 'jid' setting in config.py
+Once again, icq.host.com must correspond to the 'jid' setting in config.xml
 
 Once you have made all these changes, restart your Jabberd1.4.x server,
 then start PyICQt and it should all work.
