@@ -1,5 +1,8 @@
 2005-01-09  Daniel Henninger  <jadestorm@nc.rr.com>
 
+	* config_example.xml:
+	Added example new configuration file.
+
 	* PyICQt:
 	Altered to pass on args.
 
